# cbx-experiments

./: .pre-commit-config.yaml  README.md  pyproject.toml
cbx_experiments/: config.py  dynamics_dispatcher.py  experiment_generation.py  experiment_result.py  objective_dispatcher.py  runner.py  visualization.py
checker-configs/: mypy.ini
configs/: default.yaml
documentation/: workflow.ipynb
scripts/: run_experiment.py  visualize_results.py
